--- a/index.html
+++ b/index.html
@@ -12,11 +12,21 @@
 
 <body>
     <h1>
+        <span class="letter">G</span>
+        <span class="letter">I</span>
+        <span class="letter">T</span>
         <span class="letter">H</span>
+        <span class="letter">U</span>
+        <span class="letter">B</span>
+        <span class="letter">_</span>
         <span class="letter">E</span>
-        <span class="letter">L</span>
-        <span class="letter">L</span>
-        <span class="letter">O</span>
+        <span class="letter">X</span>
+        <span class="letter">E</span>
+        <span class="letter">R</span>
+        <span class="letter">C</span>
+        <span class="letter">I</span>
+        <span class="letter">S</span>
+        <span class="letter">E</span>
     </h1>
     <script src="app.js"></script>
 </body>
